{
  "version": 4,
  "terraform_version": "0.12.27",
  "serial": 38,
  "lineage": "5a8132a9-14e6-d24f-5a39-d644c6d0223a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0d947d7051837b524",
            "domain": "vpc",
            "id": "eipalloc-0b53850bc22a40db0",
            "instance": "i-0b61f97d9bf511d3e",
            "network_interface": "eni-026c4136e2212cb4b",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-159-184-28.compute-1.amazonaws.com",
            "public_ip": "54.159.184.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.prod-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:513766947665:instance/i-0b61f97d9bf511d3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b61f97d9bf511d3e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-026c4136e2212cb4b"
              }
            ],
            "primary_network_interface_id": "eni-026c4136e2212cb4b",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "54.159.184.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0edda442882a6ddd5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e58f6c55ed2597d9",
            "tags": {
              "Name": "web server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01bdd556548ea456e"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.prod-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513766947665:internet-gateway/igw-012e4263493df3e62",
            "id": "igw-012e4263493df3e62",
            "owner_id": "513766947665",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-03a3917cfb3c4da77"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0c769bbc600961c7f",
                "device_index": 0,
                "instance": "i-0b61f97d9bf511d3e"
              }
            ],
            "id": "eni-026c4136e2212cb4b",
            "ipv6_address_count": 0,
            "mac_address": "0a:f7:e1:c2:52:2d",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01bdd556548ea456e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e58f6c55ed2597d9"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.prod-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a10f281664d1ac3c",
            "owner_id": "513766947665",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012e4263493df3e62",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012e4263493df3e62",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-gw"
            },
            "vpc_id": "vpc-03a3917cfb3c4da77"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0467fb64d65a5bbc9",
            "route_table_id": "rtb-0a10f281664d1ac3c",
            "subnet_id": "subnet-0e58f6c55ed2597d9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.prod-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513766947665:security-group/sg-01bdd556548ea456e",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bdd556548ea456e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "513766947665",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a3917cfb3c4da77"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513766947665:subnet/subnet-0e58f6c55ed2597d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e58f6c55ed2597d9",
            "map_public_ip_on_launch": false,
            "owner_id": "513766947665",
            "tags": {
              "Name": "project-subnet"
            },
            "vpc_id": "vpc-03a3917cfb3c4da77"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513766947665:vpc/vpc-03a3917cfb3c4da77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1c4feae7c9168f5",
            "default_route_table_id": "rtb-012dd094ab5d99340",
            "default_security_group_id": "sg-0a3a60a67484fcd8c",
            "dhcp_options_id": "dopt-f17af88b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03a3917cfb3c4da77",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-012dd094ab5d99340",
            "owner_id": "513766947665",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}